--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@emailjs/browser": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.23.12",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.8.1",
+    "react-to-print": "^3.1.1",
     "react-toastify": "^11.0.5",
     "sass": "^1.90.0"
   },
